src/Navagation.css
#nav-bubble,
#nav-bar {
    position: fixed;
}

#nav-bubble {
    top: 10px;
    left: 10px;
    width: 60px;
    height: 60px;
    border-radius: 100%;
    padding: 0;
}

#nav-bar {
    top: 0;
    left: 0;
    width: 0px;
    height: 100vh;
    visibility: hidden;
    transition-duration: 0.5s;
}

#nav-bubble:hover #nav-bar {
    width: 350px;
    visibility: visible;
}

#nav-bar>a {
    margin: 0 5px;
    font-size: 1.6em;
}

#nav-bar>* {
    visibility: hidden;
    transition-duration: 0s;
}

#nav-bubble:hover #nav-bar>* {
    visibility: visible;
}

@media screen and (max-width: 768px) {

    #nav-bubble,
    #nav-bar {
        top: 0;
        left: 0;
    }

    #nav-bubble {
        position: static;
        width: 100vw;
        height: 80px;
        border-radius: 0;
        margin-bottom: 10px;
    }

    #nav-bar {
        position: fixed;
        width: inherit;
        height: inherit;
        visibility: visible;
        flex-direction: row;
        justify-content: space-around;
        align-items: center;
        transition-duration: 0s;
    }

    #nav-bar>a {
        margin: 2px;
        font-size: 1.25em;
    }

    #nav-bar>* {
        visibility: visible;
    }

    #nav-bubble:hover #nav-bar {
        width: inherit;
    }
}

